# ultra

./: .gitignore  README.md  interfaces.md
docs/plan/: README.md  example_plan.yaml  plan.md  plan.md.j2  render.py
fastapi-app/: .env  .env.example  .pre-commit-config.yaml  ADD_NEW_ENDPOINT_CHECKLIST.md  Dockerfile  README.md  alembic.ini  environment.yml  pyproject.toml
fastapi-app/app/: main.py
fastapi-app/app/api/: deps.py
fastapi-app/app/api/routers/: auth.py  items.py  membership.py  projects.py
fastapi-app/app/core/: config.py  security.py
fastapi-app/app/db/: base.py  crud.py  models.py  session.py
fastapi-app/app/schemas/: auth.py  item.py  membership.py  project.py
fastapi-app/fastapi_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fastapi-app/tests/: conftest.py  test_items.py  test_memberships.py  test_projects.py
frontend_ultra_team/: package-lock.json  package.json
frontend_ultra_team/src/: App.css  App.tsx
frontend_ultra_team/src/components/: ProjectsPanel.tsx  Sidebar.tsx  ThemeToggle.tsx  Topbar.tsx
frontend_ultra_team/src/theme/: ThemeProvider.tsx
ultra_business_team/: package-lock.json  package.json
